Fixed width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -187,3 +187,9 @@ a:focus {
 .parts-list {
   padding-left: 30px;
 }
+
+@media screen and (max-width: 1000px) {
+  .container {
+    width: 100%;
+  }
+}
